# SpeedStream

./: .env.example  .gitignore  Cargo.toml  Dockerfile  ENDPOINTS.md  Init.md  InitDatabase.md  README.md  api_bench.py  docker-compose.yml  init.sql
.config/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  update-version.yml
docs/: ENDPOINTS.md
scripts/: README.md  generate_token.sh  push_to_docker-hub.sh
src/: constant.rs  database.rs  handler.rs  lib.rs  main.rs
src/api/: handler.rs  mod.rs
src/api/parameter/: query_limit.rs
src/api/payload/: create_speed_request.rs  mod.rs
src/api/query/: date_range_query.rs  mod.rs  pagination_query.rs
src/config/: constant.rs
src/core/: app_state.rs  lane.rs  mod.rs  speed_data.rs
src/core/dto/: mod.rs  speed_data.rs
src/database/: auth.rs  cache.rs  crud.rs  mod.rs  pool.rs  types.rs  util.rs
src/middleware/: auth.rs
src/structs/: api_response.rs  app_state.rs  data_sensor_request.rs  lane.rs  logger.rs  mod.rs  pagination_query.rs  query_limit.rs  sensor_data.rs  speed_data.rs
src/structs/parameter/: mod.rs  pagination_query.rs
src/structs/payload/: create_speed_request.rs
src/telemetry/tracing/: logger.rs
src/tracing/: log_level.rs  logger.rs  mod.rs
src/traits/: log_level.rs
tests/: auth_tests.rs
