[package]
name = "SpeedStream"
version = "1.1.0"
edition = "2024"
authors = ["Maxime-Cllt"]
description = "A high-performance streaming server for real-time data processing"
license = "GPL-3.0"
repository = "https://github.com/Maxime-Cllt/SpeedStream.git"
homepage = ""
readme = "README.md"
keywords = ["streaming", "server", "API", "real-time", "data"]
categories = ["network-programming", "web-programming"]

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.226", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
chrono = { version = "0.4.42", features = ["serde"] }
http = "1.3.1"
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }
serde_json = "1.0.145"

[dev-dependencies]
serde_json = "1.0.145"

[lib]
name = "speed_stream"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]


[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
lto = false
panic = "unwind"

[profile.test]
incremental = true
opt-level = 1
debug = false
overflow-checks = true
codegen-units = 50
lto = false

[profile.release]
incremental = false
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
overflow-checks = false
panic = "abort"
strip = "symbols"
rpath = false
debug-assertions = false