[package]
name = "SpeedStream"
version = "26.2.1"
edition = "2024"
authors = ["Maxime-Cllt"]
description = "A high-performance streaming server for real-time data processing"
license = "GPL-3.0"
repository = "https://github.com/Maxime-Cllt/SpeedStream.git"
homepage = ""
readme = "README.md"
keywords = ["streaming", "server", "API", "real-time", "data"]
categories = ["network-programming", "web-programming"]

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.226", features = ["derive"] }
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4"] }
bb8 = "0.9.1"
bb8-postgres = "0.9.0"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
chrono = { version = "0.4.42", features = ["serde"] }
http = "1.3.1"
redis = { version = "1.0.1", features = ["tokio-comp", "connection-manager"] }
serde_json = "1.0.145"
async-stream = "0.3.6"
dotenvy = "0.15.7"
futures-util = "0.3.31"

[dev-dependencies]
serde_json = "1.0.145"

[lib]
name = "speed_stream"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]


[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
lto = false
panic = "unwind"

[profile.test]
incremental = true
opt-level = 1
debug = false
overflow-checks = true
codegen-units = 50
lto = false

[profile.release]
incremental = false
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
overflow-checks = false
panic = "abort"
strip = "symbols"
rpath = false
debug-assertions = false